NEWS for Seq66 0.99.16
Chris Ahlstrom
2015-07-10 to 2024-11-30

# Change Log

## [0.99.16]

### Changed

- Refined documentation about the Import/Export functionality.
- Added CONFIG\_DIR\_NAME and cleaned up configure.ac. Updated the
  Makefile sources.
- Merged a fix from a pull request to update the \*.desktop files.
- Renamed [new-pattern-editor] to [pattern-editor] in the 'usr' file.
- The Quantized Record button in the pattern editor now goes through
  this sequence when clicked: None, Tighten, Quantize, Notemap,
  None.... Also prettied-up the icons.
- Enhancements to pattern-editor note copy/paste:
  - The paste-selection box now shows the selected notes, for easier
    placement.
  - A right-click cancels a paste action in the pattern editor.
- Undid a change from awhile back that broke the recording of
  fast-keyed notes on the same MIDI key. Still need to fix the
  occasional zero-length note.
- Add provisional code to speed up recording. Grep for the macro
  SEQ66\_LINK\_NEWEST\_NOTE\_ON\_RECORD. Undefine it if desired.
- Enhanced writing pattern-dump files from the event editor.

### Fixed

- Fixed issue #128 with expanded recording not working. Note that
  the expansion is now continual, not waiting for a MIDI key to
  be struck. Also see the changes to the record buttons in the pattern
  editor.
- Merged a pull request for issue #130 to fix the \*.desktop files.
- Fixed issue #131 with NSM interactions introduced in version 0.99.11,
  plus other related issue:
  - The NSM would show two clients: "qseq66" and "seq66" when adding
    only the "qseq66" client.
  - Saving via a remote NSM Save command or by the File / Save menu
    would not clear the modified flag.
  - Closing the session would not remove any external editor windows.
- Some automation actions need to work whether the action is "on" or
  "toggle". Fixed these 'ctrl' actions:
  - Save session (under NSM) or the MIDI file.
  - Record style select.
  - Quit.