@@ -27,7 +27,7 @@
  * \library       seq66 application
  * \author        Chris Ahlstrom
  * \date          2018-02-23
- * \updates       2023-12-07
+ * \updates       2024-12-01
  * \license       GNU GPLv2 or above
  *
  *  This module defines some QColor objects.  We might consider replacing the
@@ -367,6 +367,8 @@ extern Color note_event_paint ();
 extern Color text_keys_paint ();
 extern Color text_names_paint ();
 extern Color text_slots_paint ();
+extern Color scale_paint ();
+extern Color extra_paint ();
 extern std::string get_color_name (PaletteColor index);
 extern std::string get_color_name_ex (PaletteColor index);
 extern bool is_theme_color (const Color & c);
