@@ -25,7 +25,7 @@
  * \library       seq66 application
  * \author        Chris Ahlstrom
  * \date          2018-01-01
- * \updates       2024-08-06
+ * \updates       2024-11-30
  * \license       GNU GPLv2 or above
  *
  *  This class represents the central piano-roll user-interface area of the
@@ -235,8 +235,7 @@ qperfroll::paintEvent (QPaintEvent * /*qpep*/)
     int progress_x = tix_to_pix(tick);          /* tick / scale_zoom()      */
     pen.setColor(progress_color());
     pen.setStyle(Qt::SolidLine);
-    if (usr().progress_bar_thick())
-        pen.setWidth(c_pen_width);
+    pen.setWidth(m_prog_thickness);
 
     painter.setPen(pen);
     painter.drawLine(progress_x, 1, progress_x, height() - 2);
@@ -1014,7 +1013,7 @@ qperfroll::draw_grid (QPainter & painter, const QRect & r)
     QBrush brush(back_color());                         /* Qt::NoBrush      */
     QPen pen(fore_color());                             /* Qt::black        */
     pen.setStyle(Qt::SolidLine);
-    pen.setWidth(c_pen_width);
+    pen.setWidth(m_prog_thickness);
     painter.setPen(pen);
     painter.setBrush(brush);
     painter.drawRect(0, 0, width(), height());          /* full width       */
@@ -1039,13 +1038,16 @@ qperfroll::draw_grid (QPainter & painter, const QRect & r)
         int x_pos = xoffset(tick);
         if (tick % measure_length() == 0)               /* measure          */
         {
+            pen.setStyle(Qt::SolidLine);
             pen.setColor(beat_paint());                 /* fore_color()     */
-            penwidth = 2;
+            penwidth = m_prog_thickness;
         }
         else if (tick % beat_length() == 0)             /* beat             */
         {
-            pen.setColor(beat_color());
             penwidth = 1;
+            pen.setColor(beat_color());
+            if (! usr().progress_bar_thick())
+                pen.setStyle(Qt::DotLine);
         }
         pen.setWidth(penwidth);
         painter.setPen(pen);
@@ -1126,7 +1128,7 @@ qperfroll::draw_triggers (QPainter & painter, const QRect & r)
                             grad.setColorAt(0.99, backcolor.darker(150));
                         }
                         pen.setStyle(Qt::SolidLine);    /* seq trigger box  */
-                        pen.setWidth(2);
+                        pen.setWidth(m_prog_thickness);
 
                         /*
                          * painter.fillRect(x, y, w, h + 1, grad);
@@ -1137,7 +1139,10 @@ qperfroll::draw_triggers (QPainter & painter, const QRect & r)
                         painter.setBrush(gradbrush);
                         pen.setColor(fore_color());     /* use box color    */
                         painter.setPen(pen);
-                        painter.drawRect(x + 1, y + 3, w - 2, h - 1);
+                        if (usr().progress_bar_thick())
+                            painter.drawRect(x + 1, y + 3, w - 2, h - 1);
+                        else
+                            painter.drawRect(x + 1, y + 2, w - 2, h - 1);
                     }
                     else
                     {
@@ -1152,7 +1157,7 @@ qperfroll::draw_triggers (QPainter & painter, const QRect & r)
                             brush.setColor(backcolor);
                         }
                         pen.setStyle(Qt::SolidLine);    /* seq trigger box  */
-                        pen.setWidth(2);
+                        pen.setWidth(m_prog_thickness);
                         brush.setStyle(Qt::SolidPattern);
                         painter.setBrush(brush);
                         painter.setPen(pen);
